Resource Library Contracts hinzugefügt

--- a/src/main/webapp/flowA-return.xhtml
+++ b/src/main/webapp/flowA-return.xhtml
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets">
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<h:head></h:head>
-<h:body>
+<ui:composition template="/templates/standard.xhtml">
+  <ui:param name="title" value="Flow demo" />
 
-  <h2>Flow A, Return Page</h2>
+  <ui:define name="content">
+
+    <h2>Flow A, Return Page</h2>
 
   Current flow: #{facesContext.application.flowHandler.currentFlow.id}
-
-  <hr />
-  <h:link value="home" outcome="home" />
-</h:body>
+</ui:define>
+</ui:composition>
 </html>
