--- a/src/main/webapp/flow/flowC/flowCa.xhtml
+++ b/src/main/webapp/flow/flowC/flowCa.xhtml
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<ui:composition template="/WEB-INF/templates/flowView.xhtml">
+<ui:composition template="/templates/flowView.xhtml">
   <ui:param name="created" value="#{flowCModel.created}" />
 
-  <ui:define name="content">
+  <ui:define name="subcontent">
     <h:form>
       <h:commandButton value="next" action="flowCb" />
       <h:commandButton value="return" action="return" />
