--- a/src/main/webapp/flowA/flowA2.xhtml
+++ b/src/main/webapp/flowA/flowA2.xhtml
@@ -4,10 +4,10 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<ui:composition template="/WEB-INF/templates/flowView.xhtml">
+<ui:composition template="/templates/flowView.xhtml">
   <ui:param name="created" value="#{flowAModel.created}" />
 
-  <ui:define name="content">
+  <ui:define name="subcontent">
     <h:form>
       <h:commandButton value="prev" action="flowA" />
       <h:commandButton value="return" action="flowA-return" />
