--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,38 +1,34 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<h:head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>What's new in Java EE 7?</title>
-</h:head>
-<h:body>
-  <h2>What's new in Java EE 7?</h2>
-
-  <h:form>
-    <dl>
-      <dt>
-        <strong>JavaServer Faces 2.2</strong>
-      </dt>
-      <dd>
-        <dl>
-          <dt>
-            <strong>Faces Flows</strong>
-          </dt>
-          <dd>
-            <h:commandLink value="Simple flow A (directory defined)" action="flowA" />
-          </dd>
-          <dd>
-            <h:commandLink value="Flow B1 (API defined) calling flow A" action="flowB1" />
-          </dd>
-          <dd>
-            <h:commandLink value="Flow B2 calling flow B1" action="flowB2" />
-          </dd>
-          <dd>
-            <h:commandLink value="Flow C (API defined, non-standard location)" action="flowC" />
-          </dd>
-        </dl>
-      </dd>
-    </dl>
-  </h:form>
-
-</h:body>
+<ui:composition template="/templates/standard.xhtml">
+  <ui:define name="content">
+    <h:form>
+      <dl>
+        <dt>
+          <strong>JavaServer Faces 2.2</strong>
+        </dt>
+        <dd>
+          <dl>
+            <dt>
+              <strong>Faces Flows</strong>
+            </dt>
+            <dd>
+              <h:commandLink value="Simple flow A (directory defined)" action="flowA" />
+            </dd>
+            <dd>
+              <h:commandLink value="Flow B1 (API defined) calling flow A" action="flowB1" />
+            </dd>
+            <dd>
+              <h:commandLink value="Flow B2 calling flow B1" action="flowB2" />
+            </dd>
+            <dd>
+              <h:commandLink value="Flow C (API defined, non-standard location)" action="flowC" />
+            </dd>
+          </dl>
+        </dd>
+      </dl>
+    </h:form>
+  </ui:define>
+</ui:composition>
 </html>
