Demo für "HTML 5 friendly markup" hinzugefügt

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -25,6 +25,13 @@
             <dd>
               <h:commandLink value="Flow C (API defined, non-standard location)" action="flowC" />
             </dd>
+
+            <dt>
+              <strong>HTML 5 friendly markup</strong>
+            </dt>
+            <dd>
+              <h:commandLink value="Pass-through elements and attributes" action="/html5demo" />
+            </dd>
           </dl>
         </dd>
       </dl>
