JPA-Converter hinzugefügt

--- a/src/main/webapp/html5demo.xhtml
+++ b/src/main/webapp/html5demo.xhtml
@@ -3,6 +3,7 @@
   xmlns:jsf="http://xmlns.jcp.org/jsf" >
 
 <ui:composition template="/templates/standard.xhtml">
+  <ui:param name="title" value="JSF 2.2: HTML 5 Friendly Markup" />
   <ui:define name="content">
     <h:form prependId="false">
       <h:panelGrid columns="2">
