home innerhalb der Flow-Pages deaktiviert

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -44,7 +44,7 @@
               <strong>Converter</strong>
             </dt>
             <dd>
-              <h:commandLink value="Converter for boolean an enum" action="/countries?faces-redirect=true" />
+              <h:commandLink value="Converter for boolean and enum" action="/countries?faces-redirect=true" />
             </dd>
           </dl>
         </dd>
