Demo für "Entity Graphs" hinzugefügt

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -46,6 +46,13 @@
             <dd>
               <h:commandLink value="Converter for boolean and enum" action="/countries?faces-redirect=true" />
             </dd>
+
+            <dt>
+              <strong>Entity Graphs</strong>
+            </dt>
+            <dd>
+              <h:commandLink value="Fetching lazy attributes via fetch graph" action="/publishers?faces-redirect=true" />
+            </dd>
           </dl>
         </dd>
       </dl>
