REST-Serviced hinzugefügt

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -55,6 +55,23 @@
             </dd>
           </dl>
         </dd>
+
+        <dt>
+          <strong>JAX-RS 2.0</strong>
+        </dt>
+        <dd>
+          <dl>
+            <dt>
+              <strong>REST Resources</strong>
+            </dt>
+            <dd>
+              <h:outputLink value="rest/country">Get all countries</h:outputLink>
+            </dd>
+            <dd>
+              <h:outputLink value="rest/country/DE">Get a single country</h:outputLink>
+            </dd>
+          </dl>
+        </dd>
       </dl>
     </h:form>
   </ui:define>
