--- a/src/main/webapp/flowA/flowA2.xhtml
+++ b/src/main/webapp/flowA/flowA2.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <ui:composition template="/templates/flowView.xhtml">
-  <ui:param name="created" value="#{flowAModel.created}" />
+  <ui:param name="created" value="#{flowAPresenter.created}" />
 
   <ui:define name="subcontent">
     <h:form>
