--- a/src/main/webapp/flowB2/flowB2b.xhtml
+++ b/src/main/webapp/flowB2/flowB2b.xhtml
@@ -3,7 +3,7 @@
 
 <f:view contracts="default">
   <ui:composition template="/templates/flowView.xhtml">
-    <ui:param name="created" value="#{flowB2Model.created}" />
+    <ui:param name="created" value="#{flowB2Presenter.created}" />
 
     <ui:define name="subcontent">
       <h:form>
