--- a/src/main/webapp/flowB1/flowB1b.xhtml
+++ b/src/main/webapp/flowB1/flowB1b.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <ui:composition template="/templates/flowView.xhtml">
-  <ui:param name="created" value="#{flowB1Model.created}" />
+  <ui:param name="created" value="#{flowB1Presenter.created}" />
 
   <ui:define name="subcontent">
     <h:form>
