--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -72,13 +72,21 @@
             </dd>
           </dl>
         </dd>
+
+        <dt>
+          <strong>Websockets</strong>
+        </dt>
+        <dd>
+          <dl>
+            <dd>
+              <h:commandLink value="Server-side push" action="/ticker?faces-redirect=true" />
+            </dd>
+          </dl>
+        </dd>
       </dl>
     </h:form>
   </ui:define>
 
-  <ui:define name="footer">
-    <h:outputText value="#{facesContext.viewRoot.viewId}" style="float: right;" />
-  </ui:define>
 
 </ui:composition>
 </html>
