--- a/src/main/webapp/html5demo.xhtml
+++ b/src/main/webapp/html5demo.xhtml
@@ -16,7 +16,7 @@
           <f:passThroughAttribute name="size" value="40" />
         </h:inputText>
         
-        <h:commandButton value="ok" />
+        <h:commandButton value="ok" action="#{demoPresenter.doOk()}"/>
       </h:panelGrid>
     </h:form>
   </ui:define>
